<resources>
    <string name="app_name">KotlinDictionary</string>
    <string name="search_the_word">Search the word...</string>
    <string name="my_words">My words</string>
    <string name="settings">Settings</string>
    <string name="endpoint">https://wordsapiv1.p.mashape.com/</string>
    <string name="networkError">Please check your Internet connection!</string>
    <string name="prononcuation">[%1$s]</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">search</string>
    <string name="pronounce_title">pronounce</string>
    <string name="examples">Examples</string>
    <string name="see_all">See all</string>
    <string name="definitions">Definitions</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="collapse">Collapse</string>
    <string name="phrases">Phrases</string>
    <string name="derivations">Derivation</string>
    <string name="typeOf">Type Of</string>
    <string name="hasTypes">Has Types</string>
    <string name="partOf">Part Of</string>
    <string name="hasParts">Has Parts</string>
    <string name="substanceOf">Substance Of</string>
    <string name="word_of_the_day">Word of the Day</string>
    <string name="no_word">Sorry, no word info found</string>
    <string name="more_from_recent_history">More from recent history</string>
    <string name="speak_now">Speak Now</string>
    <string name="default_error">Error</string>
    <string name="word_not_found_error">Word not found</string>
    <string name="empty_part_of_speech">-</string>
    <string name="example_formatted_string">\'%1$s\'</string>
    <string name="notes">Notes</string>
    <string name="login_error">Google sign in failed</string>
    <string name="login_success">You successfully signed in as %1$s</string>
    <string name="account">Sign out</string>
    <string name="sign_out_confirm_question">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in_message_favorites">To add words to favorites please sign in</string>
    <string name="fav_words_title">My Words</string>
    <string name="delete">Delete</string>
    <string name="word_details">Word Details</string>
    <string name="delete_word_error">Error deleting word</string>
    <string name="undo">Undo</string>
    <string name="word_removed">Word \'%1$s\' removed from favorites</string>
    <string name="fav_word_selected">%1$d/%2$d</string>
    <string name="sort_by_date">By Date</string>
    <string name="random_order">In Random Order</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort">Sort</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_account_info">You are signed in as %1$s</string>
    <string name="search_field_transition_name">search_field_transition_name</string>
    <string name="search_appbar_transition_name">search_appbar_transition_name</string>
</resources>
