<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/sortByTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckedTextView
        android:id="@+id/sortByDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:checkMark="@drawable/ic_check_selector"
        android:checked="true"
        android:gravity="center_vertical"
        android:text="@string/sort_by_date"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByTitle"
        />

    <CheckedTextView
        android:id="@+id/sortByName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkMark="@drawable/ic_check_selector"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/sort_by_name"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByDate"
        />

    <CheckedTextView
        android:id="@+id/sortRandomly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkMark="@drawable/ic_check_selector"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/random_order"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByName"
        />

</android.support.constraint.ConstraintLayout>